--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Text</h1>
 		</header>
 			<section id="content">
 				<canvas id="Reference_Text" data-processing-sources="Reference_Text.pde">
